skeplib/tests/fixtures/parser/valid/short_circuit.sk
fn main() -> Int {
  if (false && true || true) {
    return 0;
  }
  return 1;
}
