skeplib/tests/fixtures/parser/invalid/missing_call_comma.sk
fn main() -> Int {
  hello(1 2);
  return 0;
}
